@@ -13,6 +13,7 @@ Archive
 Package/Installer
 - PACKAGE_ADAPTER_V1
 - PACKAGE_METADATA_PARTIAL
+- PACKAGE_SIGNING_INFO_PRESENT
 - PACKAGE_SIGNING_INFO_UNAVAILABLE
 - EXECUTION_WITHHELD_INSTALLER
 - PACKAGE_EXTERNAL_REF_PRESENT (adapter findings signal)
